Unify JAR location in all openvidu-server Dockerfiles

--- a/openvidu-server/docker/openvidu-dev/Dockerfile
+++ b/openvidu-server/docker/openvidu-dev/Dockerfile
@@ -15,27 +15,27 @@ RUN echo "deb [arch=amd64] http://ubuntu.openvidu.io/6.18.0 bionic kms6" | tee /
 
 # Install Java, supervisor and netstat
 RUN apt-get update && apt-get install -y \
-  openjdk-11-jre \
-  supervisor && \
-  rm -rf /var/lib/apt/lists/*
+	openjdk-11-jre \
+	supervisor && \
+	rm -rf /var/lib/apt/lists/*
 
 # Configure supervisor
 RUN mkdir -p /var/log/supervisor
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
+RUN mkdir -p /opt/openvidu
+
 # Copy OpenVidu Server
-COPY openvidu-server.jar openvidu-server.jar
+COPY openvidu-server-*.jar /opt/openvidu
 
 # Copy KMS entrypoint
 COPY kms.sh /kms.sh
 
-# Cleanup
-RUN rm -rf /var/lib/apt/lists/* && \
-	apt-get autoremove --purge -y && apt-get autoclean
-
 EXPOSE 8888
 EXPOSE 9091
 EXPOSE 4443
+
+WORKDIR /opt/openvidu
 
 # Exec supervisord
 CMD ["/usr/bin/supervisord"]
