--- a/openvidu-server/docker/openvidu-dev/supervisord.conf
+++ b/openvidu-server/docker/openvidu-dev/supervisord.conf
@@ -9,5 +9,5 @@ command=/bin/bash /kms.sh
 redirect_stderr=true
 
 [program:openvidu-server]
-command=/bin/bash -c "java -jar -Dspring.config.additional-location=classpath:/application-container.properties -DOPENVIDU_DEV=true /openvidu-server.jar"
+command=/bin/bash -c "java -jar -Dspring.config.additional-location=classpath:/application-container.properties -DOPENVIDU_DEV=true /opt/openvidu/openvidu-server-*.jar"
 redirect_stderr=true
