--- a/openvidu-server/docker/openvidu-server-pro/Dockerfile
+++ b/openvidu-server/docker/openvidu-server-pro/Dockerfile
@@ -14,9 +14,9 @@ RUN apt-get update && apt-get install -y \
   dnsutils \
 && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /opt/openvidu /usr/local/bin/
+RUN mkdir -p /opt/openvidu
 
-COPY openvidu-server-pro-*.jar /opt/openvidu/openvidu-server.jar
+COPY openvidu-server-pro-*.jar /opt/openvidu
 COPY ./entrypoint.sh /usr/local/bin
 COPY ./discover_my_public_ip.sh /usr/local/bin
 COPY ./coturn-shared-key.template /usr/local
