--- a/openvidu-server/docker/openvidu-server/Dockerfile
+++ b/openvidu-server/docker/openvidu-server/Dockerfile
@@ -9,8 +9,9 @@ RUN apt-get update && apt-get install -y \
   dnsutils \
 && rm -rf /var/lib/apt/lists/*
 
-# Copy OpenVidu Server
-COPY openvidu-server.jar /
+RUN mkdir -p /opt/openvidu
+
+COPY openvidu-server-*.jar /opt/openvidu
 COPY ./entrypoint.sh /usr/local/bin
 COPY ./discover_my_public_ip.sh /usr/local/bin
 COPY ./coturn-shared-key.template /usr/local
@@ -18,5 +19,7 @@ RUN chmod +x /usr/local/bin/entrypoint.sh && \
     chmod +x /usr/local/bin/discover_my_public_ip.sh
 
 EXPOSE 4443
+
+WORKDIR /opt/openvidu
 
 CMD /usr/local/bin/entrypoint.sh
