--- a/openvidu-server/deployments/pro/aws/cfn-mkt-ov-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-ov-ami.yaml.template
@@ -82,7 +82,7 @@ Resources:
                 cd /opt
                 curl https://s3-eu-west-1.amazonaws.com/aws.openvidu.io/install_openvidu_pro_OPENVIDU_VERSION.sh | bash
 
-                if [[ USE_MASTER_DOCKER_IMAGE == "true" ]]; then
+                if [[ USE_MASTER_DOCKER_IMAGES == "true" ]]; then
                   pushd openvidu
                   # docker-compose.yml replace with master version
                   IMAGES="$(cat docker-compose.yml | grep 'image: openvidu/' | cut -d':' -f2 | sed -e 's/^[[:space:]]*//')"
@@ -113,7 +113,7 @@ Resources:
                 set -eu -o pipefail
 
                 # AWS cli
-                docker pull amazon/aws-cli:AWS_DOCKER_TAG
+                docker pull amazon/aws-cli:AWS_CLI_DOCKER_TAG
 
                 # Openvidu recording
                 docker pull openvidu/openvidu-recording:OPENVIDU_RECORDING_DOCKER_TAG
