deployment: Do not use IP level deny for virtual background

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/new_api_pro.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/new_api_pro.conf
@@ -46,7 +46,6 @@
     }
 
     location /openvidu/virtual-background {
-        {rules_acess_api}
-        deny all;
+        allow all;
         proxy_pass http://openviduserver;
     }
