--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -45,19 +45,19 @@ jobs:
   main:
     runs-on: ubuntu-latest
     container:
-      image: ${{ github.event.inputs.TEST_IMAGE || 'openvidu/openvidu-test-e2e:22.04' }}
+      image: ${{ inputs.TEST_IMAGE || 'openvidu/openvidu-test-e2e:22.04' }}
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
         - /opt/openvidu:/opt/openvidu
     env:
-      TEST_IMAGE: ${{ github.event.inputs.TEST_IMAGE || 'openvidu/openvidu-test-e2e:22.04' }}
+      TEST_IMAGE: ${{ inputs.TEST_IMAGE || 'openvidu/openvidu-test-e2e:22.04' }}
       KURENTO_SNAPSHOTS_URL: ${{ secrets.KURENTO_SNAPSHOTS_URL }}
-      KURENTO_MEDIA_SERVER_IMAGE: ${{ github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE || 'kurento/kurento-media-server:6.18.0' }}
-      KURENTO_JAVA_COMMIT: ${{ github.event.inputs.KURENTO_JAVA_COMMIT || 'default' }}
-      DOCKER_RECORDING_VERSION: ${{ github.event.inputs.DOCKER_RECORDING_VERSION || 'default' }}
-      CHROME_VERSION: ${{ github.event.inputs.CHROME_VERSION || 'latest' }}
-      FIREFOX_VERSION: ${{ github.event.inputs.FIREFOX_VERSION || 'latest' }}
-      EDGE_VERSION: ${{ github.event.inputs.EDGE_VERSION || 'latest' }}
+      KURENTO_MEDIA_SERVER_IMAGE: ${{ inputs.KURENTO_MEDIA_SERVER_IMAGE || 'kurento/kurento-media-server:6.18.0' }}
+      KURENTO_JAVA_COMMIT: ${{ inputs.KURENTO_JAVA_COMMIT || 'default' }}
+      DOCKER_RECORDING_VERSION: ${{ inputs.DOCKER_RECORDING_VERSION || 'default' }}
+      CHROME_VERSION: ${{ inputs.CHROME_VERSION || 'latest' }}
+      FIREFOX_VERSION: ${{ inputs.FIREFOX_VERSION || 'latest' }}
+      EDGE_VERSION: ${{ inputs.EDGE_VERSION || 'latest' }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup scripts
