deployment: Parametrize correctly openvidu-recording version for cloudformation nightlies

--- a/openvidu-server/deployments/enterprise/aws/cfn-crete-ov-aws-asg-ami.yaml.template
+++ b/openvidu-server/deployments/enterprise/aws/cfn-crete-ov-aws-asg-ami.yaml.template
@@ -101,6 +101,9 @@ Resources:
                     done
                   fi
 
+                  # openvidu-recording replace with master version
+                  echo "OPENVIDU_RECORDING_VERSION=OPENVIDU_RECORDING_DOCKER_TAG" >> /opt/openvidu/.env
+
                   popd
                 fi
               mode: "000755"
