--- a/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
@@ -95,7 +95,10 @@ Resources:
                   sed -i "s|MEDIASOUP_IMAGE=openvidu/mediasoup-controller.*|MEDIASOUP_IMAGE=openvidu/mediasoup-controller:master|g" docker-compose.yml
                   sed -i "s|COTURN_IMAGE=openvidu/openvidu-coturn.*|COTURN_IMAGE=openvidu/openvidu-coturn:master|g" docker-compose.yml
                   sed -i "s|SPEECH_TO_TEXT_IMAGE=openvidu/speech-to-text-service.*|SPEECH_TO_TEXT_IMAGE=openvidu/speech-to-text-service:master|g" docker-compose.yml
+                  sed -i "s|OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording.*|OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:OPENVIDU_RECORDING_DOCKER_TAG|g" docker-compose.yml
                   popd
+
+                  docker pull openvidu/openvidu-recording:OPENVIDU_RECORDING_DOCKER_TAG
                 fi
 
                 # Define Installation Type
