openvidu-java-client: Create 'performJarFileRelease' maven profile to build openvidu-java-client builds in a jar file for nightlies

--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -190,6 +190,38 @@
 			</build>
 		</profile>
 
+		<profile>
+			<id>build-jar-with-dependencies</id>
+			<activation>
+				<property>
+					<name>performJarFileRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>${version.assembly.plugin}</version>
+						<configuration>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+						<executions>
+							<execution>
+								<id>make-assembly</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 </project>
