deployment: Update nginx for Enterprise HA on premises

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/enterprise-ha/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/enterprise-ha/default.conf
@@ -1,24 +1,40 @@
 {xframe_options}
 
-add_header X-Content-Type-Options nosniff;
-add_header X-XSS-Protection "1; mode=block";
+{enterprise_ha_nodes_upstream}
 
 {app_upstream}
 
+upstream minio {
+    server minio-s3:9001;
+}
+
 upstream kibana {
-    server localhost:5601;
+    server kibana:5601;
 }
 
 upstream elasticsearch {
-    server localhost:9200;
-}
-
-upstream openviduserver {
-    server localhost:5443;
+    server elasticsearch:9200;
 }
 
 {redirect_www_ssl}
 
+##################################
+# Private Load balancer port     #
+##################################
+server {
+    listen 5443;
+
+    location / {
+        {proxy_config}
+
+        proxy_pass http://openviduserver;
+    }
+
+}
+
+##################################
+# Public Load balancer           #
+##################################
 server {
     # Redirect to https
     if ($host = {domain_name}) {
@@ -69,6 +85,8 @@ server {
     {common_api_pro}
 
     {deprecated_api_pro}
+
+    {common_api_enterprise}
 
     {new_api_pro}
 
