--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/ce/common_api_ce.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/ce/common_api_ce.conf
@@ -1,5 +1,5 @@
     #################################
-    # Common rules                  #
+    # Common rules CE              #
     #################################
     # Dashboard rule
     location /dashboard {
