--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
@@ -1,5 +1,5 @@
     #################################
-    # Common rules                  #
+    # Common rules PRO              #
     #################################
     location /dashboard {
         {rules_access_dashboard}
@@ -25,7 +25,7 @@
     location ~ ^/openvidu/elasticsearch$ {
         {rules_access_dashboard}
         deny all;
-        
+
         rewrite ^/openvidu/elasticsearch$ / break;
         proxy_pass http://elasticsearch;
     }
