--- a/openvidu-server/deployments/enterprise-ha/docker-compose/node/docker-compose.yml
+++ b/openvidu-server/deployments/enterprise-ha/docker-compose/node/docker-compose.yml
@@ -56,6 +56,7 @@ services:
             - OPENVIDU_PRO_COTURN_IN_MEDIA_NODES=${OPENVIDU_PRO_COTURN_IN_MEDIA_NODES:-false}
             - OPENVIDU_PRO_COTURN_PORT_MEDIA_NODES=${OPENVIDU_PRO_COTURN_PORT_MEDIA_NODES:-443}
             - OPENVIDU_PRO_MEDIA_NODE_PUBLIC_IP_AUTODISCOVER=${OPENVIDU_PRO_MEDIA_NODE_PUBLIC_IP_AUTODISCOVER:-auto-ipv4}
+            - OPENVIDU_PRO_CLUSTER_RECONNECTION_TIMEOUT=60
             - WAIT_KIBANA_URL=${OPENVIDU_PRO_KIBANA_HOST:-http://127.0.0.1/kibana}
             - MULTI_MASTER_NODE_ID=${OPENVIDU_ENTERPRISE_HA_NODE_PRIVATE_IP}
             - DOTENV_PATH=${PWD}
