deployment: Add script to update load balancer IPs in enterprise-ha deployment

--- a/openvidu-server/docker/openvidu-proxy/Dockerfile
+++ b/openvidu-server/docker/openvidu-proxy/Dockerfile
@@ -15,7 +15,7 @@ COPY ./default.conf /etc/nginx/conf.d/default.conf
 COPY ./default_nginx_conf /default_nginx_conf
 
 # Entrypoint and discover public ip scripts
-COPY ./discover_my_public_ip.sh /usr/local/bin
+COPY ./discover_my_public_ip.sh ./update_enterprise_ha_nodes.sh  /usr/local/bin/
 
 # Copy nginx.conf
 COPY ./nginx.conf /etc/nginx/nginx.conf
@@ -27,6 +27,7 @@ RUN mkdir -p /var/www/certbot && \
     mkdir -p /etc/nginx/vhost.d/ && \
     mkdir -p /custom-nginx && \
     chmod +x /usr/local/bin/entrypoint.sh && \
-    chmod +x /usr/local/bin/discover_my_public_ip.sh
+    chmod +x /usr/local/bin/discover_my_public_ip.sh && \
+    chmod +x /usr/local/bin/update_enterprise_ha_nodes.sh
 
 CMD [ "/usr/local/bin/entrypoint.sh" ]
