--- a/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
+++ b/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
@@ -273,12 +273,8 @@ Resources:
                 echo $PublicHostname > /usr/share/openvidu/old-host-name
 
                 # Restart all services
-                pushd /opt/openvidu
-                docker-compose up -d kms
-                until docker-compose ps | grep kms | grep healthy; do
-                    echo "Waiting kms..."
-                done
-                docker-compose up -d
+                pushd "$WORKINGDIR"
+                ./openvidu restart >/dev/null 2>&1 &
                 popd
               mode: "000755"
               owner: "root"
@@ -314,11 +310,7 @@ Resources:
 
           # Start openvidu application
           pushd /opt/openvidu
-          docker-compose up -d kms
-          until docker-compose ps | grep kms | grep healthy; do
-              echo "Waiting kms..."
-          done
-          docker-compose up -d
+          ./openvidu start >/dev/null 2>&1 &
           popd
 
           # Send info to openvidu
