deployment: separated rules for dashboard/ and inspector/ in openvidu-proxy
To fix a rule in OpenVidu Enterprise to redirect `<domain>/inspector` to `<domain>/inspector/`,
now dashboard and inspector rules are separated to have different configurations
depending on the OpenVidu Edition PRO or Enterprise

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/enterprise-ha/common_api_enterprise.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/enterprise-ha/common_api_enterprise.conf
@@ -1,6 +1,8 @@
     #################################
     # Common rules Enterprise       #
     #################################
+    {dashboard_inspector_rules_enterprise}
+
     location /minio/ {
         {rules_access_dashboard}
         deny all;
