--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
@@ -1,18 +1,7 @@
     #################################
     # Common rules PRO              #
     #################################
-    location /dashboard {
-        {rules_access_dashboard}
-        deny all;
-        rewrite ^/dashboard/(.*)$ /$1 break;
-        proxy_pass http://openviduserver/;
-    }
-
-    location /inspector {
-        {rules_access_dashboard}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
+    {dashboard_inspector_rules_pro}
 
     location /kibana {
         {rules_access_dashboard}
