--- a/openvidu-server/deployments/pro/docker-compose/mono-node/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/mono-node/docker-compose.yml
@@ -161,7 +161,7 @@ services:
             - MEDIASOUP_IMAGE=openvidu/mediasoup-controller:2.27.0
             - METRICBEAT_IMAGE=docker.elastic.co/beats/metricbeat-oss:7.8.0
             - FILEBEAT_IMAGE=docker.elastic.co/beats/filebeat-oss:7.8.0
-            - OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:2.27.0
+            - OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:2.28.0-beta1
             - SPEECH_TO_TEXT_IMAGE=openvidu/speech-to-text-service:2.27.0
             - COTURN_IMAGE=openvidu/openvidu-coturn:2.27.0
             - NO_COLOR=true
