--- a/openvidu-server/deployments/enterprise-ha/docker-compose/base-services/docker-compose.override.yml
+++ b/openvidu-server/deployments/enterprise-ha/docker-compose/base-services/docker-compose.override.yml
@@ -13,7 +13,7 @@ services:
     #
     # --------------------------------------------------------------
     app:
-        image: openvidu/openvidu-call:master
+        image: openvidu/openvidu-call:2.28.0
         restart: on-failure
         ports:
           - 5442:5442
