--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -20,7 +20,13 @@ RUN apt-get update && apt-get -y upgrade && \
     rsync \
     software-properties-common \
     sudo && \
-    curl -sL https://deb.nodesource.com/setup_18.x | bash - && apt-get install -y nodejs && \
+    # Node
+    mkdir -p /etc/apt/keyrings && \
+    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | sudo gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
+    NODE_MAJOR=20 && \
+    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list && \
+    apt-get update && apt-get install nodejs -y && \
+    # Node
     npm install -g http-server@latest && \
     rm -rf /var/lib/apt/lists/* && \
     apt-get autoremove --purge -y && apt-get autoclean
